Fixed an issue on mobile that was causing the full-width view to bleed and make vertical scrolling possible

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,7 @@ code {
   background-image: url("./images/renato-pozzi-G4oGYy_ZcsQ-unsplash.jpg");
   background-color: white;
   background-size: cover;
+  overflow: hidden;
   background-position: bottom;
   max-width: 100%;
   max-height: 100%;
@@ -162,12 +163,11 @@ code {
 
 .full-width {
   left: 50%;
-  margin-left: -50vw;
-	margin-right: -50vw;
-	max-width: 100vw;
-	position: relative;
-	right: 50%;
-	width: 100vw;
+	width: 100%;
+  position: absolute;
+  transform: translateX(-50%);
+  overflow: hidden;
+  padding: 0 !important;
 }
 
 /* ----------------- Fonts ----------------- */
@@ -488,7 +488,7 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     z-index: 2;
     background: white;
     width: 0%;
-    height: 100vh;
+    height: 100%;
     right: 0;
     top: 0;
     border-left: 1px solid gray;
